messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
  labels:
    app: messaging-app
    color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      color: blue
  template:
    metadata:
      labels:
        app: messaging-app
        color: blue
    spec:
      containers:
        - name: messaging-app
          image: messaging-app:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /admin/login/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
