messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
  labels:
    app: messaging-app
    color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      color: green
  template:
    metadata:
      labels:
        app: messaging-app
        color: green
    spec:
      containers:
        - name: messaging-app
          image: messaging-app:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /admin/login/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
